# SketchBook

./: README.md
anatomy/Confluent/: README.md  build.gradle  client.properties
anatomy/FinancialTimeSeriesForecasting/: README.md
anatomy/FlattenJsonFile/: README.md  json.json  pom.xml
anatomy/IndexJson/: application.properties  note.txt  pom.xml
anatomy/Jar/: README.md  pom.xml
anatomy/LanceDB/: Grok_Note.md  README.md  Untitled.ipynb  app.py  embedPDF.ipynb  lanceDB.md  note_copilot.md  output.txt  queryLanceDB.py  readLanceDB.ipynb
anatomy/MordenConfig/: conf.prop  pom.xml  remote_debug.txt
anatomy/OlympicArena/: REAdME.md  requirements.txt
anatomy/RAG/: RAG_Faiss.ipynb  README.md  rag_app.py  requirements.txt
anatomy/SpringShutdown/: Dockerfile  README.MD  deployment.yaml  pom.xml  service.yaml
anatomy/anthingLLM/: README.md
anatomy/avro/: README.md  person.avro  person.avsc  pom.xml  users.avro
anatomy/avro_upgrade/: README.md  pom.xml
anatomy/chatboot/: index.html
anatomy/commandLine/: README.md  pom.xml
anatomy/graph/: 20250228.dot  20250228.py  README.md  SpringAutumn_basemap.dot  detail2.dot  lisi.py  requirements.txt  《谏逐客书》.dot
anatomy/inMemDBTesting/: pom.xml
anatomy/kuzu/: grok_kuzu.py  grok_kuzu_1.py  grok_kuzu_sm.py  kuzu_ollama.py  load_data.cypher  schema.cypher  security_master_updated.csv
anatomy/minifi/: NiFi_Flow.json  config.yml  toMinifi.xml
anatomy/minikube/: Dockerfile  README.md  cronjob.yaml  deployment.yaml  my-manifest.yaml  pod-secret.yaml  pom.xml  secrets.yaml  service.yaml
anatomy/morse_code/: README.md  cw.py  cw2.py  cw_learn.py  note.txt  spectrogram.py  test.txt  wpm.py
anatomy/mp3/: note.md  toTxt.py
anatomy/openclaw/: README.md
anatomy/parseCsv2Bean/: pom.xml
anatomy/printone/: README.md  index.html  package-lock.json  package.json
anatomy/profile/: README.md  pom.xml
anatomy/spa/: pom.xml  schema.sql  update-schema.sql
anatomy/spring-vault-configuration/: pom.xml
anatomy/streamlit/: README.md  chat.py
anatomy/textual/: README.md  chatbot.py  post.txt  requirement.txt
anatomy/tmux/: README.md
anatomy/truststore/: README.md
anatomy/vault/: env.bat  local_run_vault.bat  note.txt  set_secret.bat
charcoal/KafkaApplication/: README.md  pom.xml
charcoal/LLM/: .README.md.swp  BELLE_INFER_COLAB.ipynb  README.md
charcoal/bootcamp/: CONTRIBUTING.md  README.md  SCHEDULE.md
charcoal/bootcamp/exercises/01-basics/: CMakeLists.txt  README.md  ex01_factorial_solution.cpp  ex01_factorial_starter.cpp  ex02_fibonacci_solution.cpp  ex02_fibonacci_starter.cpp  ex03_calculator_solution.cpp  ex03_calculator_starter.cpp  ex04_reverse_solution.cpp  ex04_reverse_starter.cpp  ex05_gcd_solution.cpp  ex05_gcd_starter.cpp  ex06_palindrome_solution.cpp  ex06_palindrome_starter.cpp  solution.cpp  starter.cpp
charcoal/bootcamp/exercises/02-oo/: CMakeLists.txt  README.md  ex01_counter_solution.cpp  ex01_counter_starter.cpp  ex02_matrix_raii_solution.cpp  ex02_matrix_raii_starter.cpp  ex03_unique_ptr_solution.cpp  ex03_unique_ptr_starter.cpp  ex04_shared_ptr_solution.cpp  ex04_shared_ptr_starter.cpp
charcoal/bootcamp/exercises/03-stl/: CMakeLists.txt  README.md  ex01_unique_sorted_solution.cpp  ex01_unique_sorted_starter.cpp  ex02_frequency_solution.cpp  ex02_frequency_starter.cpp  ex03_brackets_solution.cpp  ex03_brackets_starter.cpp  ex04_kth_smallest_solution.cpp  ex04_kth_smallest_starter.cpp  ex05_bounds_solution.cpp  ex05_bounds_starter.cpp
charcoal/bootcamp/exercises/04-modern-cpp/: CMakeLists.txt  README.md  ex01_move_solution.cpp  ex01_move_starter.cpp  ex02_lambda_solution.cpp  ex02_lambda_starter.cpp  ex03_clamp_solution.cpp  ex03_clamp_starter.cpp  ex04_threads_solution.cpp  ex04_threads_starter.cpp
charcoal/bootcamp/exercises/05-algorithms/: CMakeLists.txt  README.md  ex01_prefix_sums_solution.cpp  ex01_prefix_sums_starter.cpp  ex02_two_sum_sorted_solution.cpp  ex02_two_sum_sorted_starter.cpp  ex03_sliding_window_solution.cpp  ex03_sliding_window_starter.cpp  ex04_longest_window_solution.cpp  ex04_longest_window_starter.cpp  ex05_binsearch_answer_solution.cpp  ex05_binsearch_answer_starter.cpp  ex06_greedy_intervals_solution.cpp  ex06_greedy_intervals_starter.cpp
charcoal/bootcamp/exercises/06-data-structures/: CMakeLists.txt  README.md  ex01_dsu_solution.cpp  ex01_dsu_starter.cpp  ex02_fenwick_solution.cpp  ex02_fenwick_starter.cpp  ex03_segtree_solution.cpp  ex03_segtree_starter.cpp  ex04_sparse_table_solution.cpp  ex04_sparse_table_starter.cpp
charcoal/bootcamp/exercises/07-graphs/: CMakeLists.txt  README.md  ex01_bfs_solution.cpp  ex01_bfs_starter.cpp  ex02_dfs_components_solution.cpp  ex02_dfs_components_starter.cpp  ex03_dijkstra_solution.cpp  ex03_dijkstra_starter.cpp  ex04_mst_kruskal_solution.cpp  ex04_mst_kruskal_starter.cpp  ex05_topo_sort_solution.cpp  ex05_topo_sort_starter.cpp
charcoal/bootcamp/exercises/08-dp/: CMakeLists.txt  README.md  ex01_knapsack_01_solution.cpp  ex01_knapsack_01_starter.cpp  ex02_lcs_solution.cpp  ex02_lcs_starter.cpp  ex03_lis_solution.cpp  ex03_lis_starter.cpp  ex04_coin_change_solution.cpp  ex04_coin_change_starter.cpp  ex05_edit_distance_solution.cpp  ex05_edit_distance_starter.cpp
charcoal/bootcamp/exercises/09-math/: CMakeLists.txt  README.md  ex01_sieve_solution.cpp  ex01_sieve_starter.cpp  ex02_mod_pow_solution.cpp  ex02_mod_pow_starter.cpp  ex03_mod_inverse_solution.cpp  ex03_mod_inverse_starter.cpp  ex04_ncr_solution.cpp  ex04_ncr_starter.cpp  ex05_gcd_lcm_solution.cpp  ex05_gcd_lcm_starter.cpp
charcoal/bootcamp/templates/: CMakeLists.txt
charcoal/chatbot/: README.md  package-lock.json
charcoal/csv/: csv1.csv  note.txt  pom.xml
charcoal/elastic/: Readme.md  pom.xml
charcoal/fileWatcher/: pom.xml
charcoal/ibmmq/: README.md  pom.xml  startmq.txt
digital/ollama/: Modefile.chineseClassic  Modelfile.chineseClassic:3b  README.md
watercolor/SwapPayment/: README.md  payment.avsc  pom.xml
watercolor/openclaw/: note.md
watercolor/openclaw_poc/: POC.md  jest.config.js  package-lock.json  package.json  tsconfig.json
(+395 files in other folders)
