cmake_minimum_required(VERSION 3.10)
project(ex01_basics)
set(CMAKE_CXX_STANDARD 17)

add_executable(ex01_factorial_starter  ex01_factorial_starter.cpp)
add_executable(ex01_factorial_solution ex01_factorial_solution.cpp)
add_executable(ex02_fibonacci_starter   ex02_fibonacci_starter.cpp)
add_executable(ex02_fibonacci_solution  ex02_fibonacci_solution.cpp)
add_executable(ex03_calculator_starter  ex03_calculator_starter.cpp)
add_executable(ex03_calculator_solution ex03_calculator_solution.cpp)
add_executable(ex04_reverse_starter     ex04_reverse_starter.cpp)
add_executable(ex04_reverse_solution    ex04_reverse_solution.cpp)
add_executable(ex05_gcd_starter         ex05_gcd_starter.cpp)
add_executable(ex05_gcd_solution        ex05_gcd_solution.cpp)
add_executable(ex06_palindrome_starter  ex06_palindrome_starter.cpp)
add_executable(ex06_palindrome_solution ex06_palindrome_solution.cpp)
