cmake_minimum_required(VERSION 3.10)
project(ex03_stl)
set(CMAKE_CXX_STANDARD 17)

add_executable(ex01_unique_sorted_starter  ex01_unique_sorted_starter.cpp)
add_executable(ex01_unique_sorted_solution ex01_unique_sorted_solution.cpp)
add_executable(ex02_frequency_starter      ex02_frequency_starter.cpp)
add_executable(ex02_frequency_solution     ex02_frequency_solution.cpp)
add_executable(ex03_brackets_starter       ex03_brackets_starter.cpp)
add_executable(ex03_brackets_solution      ex03_brackets_solution.cpp)
add_executable(ex04_kth_smallest_starter   ex04_kth_smallest_starter.cpp)
add_executable(ex04_kth_smallest_solution  ex04_kth_smallest_solution.cpp)
add_executable(ex05_bounds_starter         ex05_bounds_starter.cpp)
add_executable(ex05_bounds_solution        ex05_bounds_solution.cpp)
