cmake_minimum_required(VERSION 3.10)
project(ex05_algorithms)
set(CMAKE_CXX_STANDARD 17)

add_executable(ex01_prefix_sums_starter   ex01_prefix_sums_starter.cpp)
add_executable(ex01_prefix_sums_solution  ex01_prefix_sums_solution.cpp)
add_executable(ex02_two_sum_sorted_starter   ex02_two_sum_sorted_starter.cpp)
add_executable(ex02_two_sum_sorted_solution  ex02_two_sum_sorted_solution.cpp)
add_executable(ex03_sliding_window_starter   ex03_sliding_window_starter.cpp)
add_executable(ex03_sliding_window_solution  ex03_sliding_window_solution.cpp)
add_executable(ex04_longest_window_starter   ex04_longest_window_starter.cpp)
add_executable(ex04_longest_window_solution  ex04_longest_window_solution.cpp)
add_executable(ex05_binsearch_answer_starter  ex05_binsearch_answer_starter.cpp)
add_executable(ex05_binsearch_answer_solution ex05_binsearch_answer_solution.cpp)
add_executable(ex06_greedy_intervals_starter  ex06_greedy_intervals_starter.cpp)
add_executable(ex06_greedy_intervals_solution ex06_greedy_intervals_solution.cpp)
