cmake_minimum_required(VERSION 3.10)
project(ex07_graphs)
set(CMAKE_CXX_STANDARD 17)

add_executable(ex01_bfs_starter             ex01_bfs_starter.cpp)
add_executable(ex01_bfs_solution            ex01_bfs_solution.cpp)
add_executable(ex02_dfs_components_starter  ex02_dfs_components_starter.cpp)
add_executable(ex02_dfs_components_solution ex02_dfs_components_solution.cpp)
add_executable(ex03_dijkstra_starter        ex03_dijkstra_starter.cpp)
add_executable(ex03_dijkstra_solution       ex03_dijkstra_solution.cpp)
add_executable(ex04_mst_kruskal_starter     ex04_mst_kruskal_starter.cpp)
add_executable(ex04_mst_kruskal_solution    ex04_mst_kruskal_solution.cpp)
add_executable(ex05_topo_sort_starter       ex05_topo_sort_starter.cpp)
add_executable(ex05_topo_sort_solution      ex05_topo_sort_solution.cpp)
