cmake_minimum_required(VERSION 3.10)
project(ex08_dp)
set(CMAKE_CXX_STANDARD 17)

add_executable(ex01_knapsack_01_starter  ex01_knapsack_01_starter.cpp)
add_executable(ex01_knapsack_01_solution ex01_knapsack_01_solution.cpp)
add_executable(ex02_lcs_starter          ex02_lcs_starter.cpp)
add_executable(ex02_lcs_solution         ex02_lcs_solution.cpp)
add_executable(ex03_lis_starter          ex03_lis_starter.cpp)
add_executable(ex03_lis_solution         ex03_lis_solution.cpp)
add_executable(ex04_coin_change_starter  ex04_coin_change_starter.cpp)
add_executable(ex04_coin_change_solution ex04_coin_change_solution.cpp)
add_executable(ex05_edit_distance_starter  ex05_edit_distance_starter.cpp)
add_executable(ex05_edit_distance_solution ex05_edit_distance_solution.cpp)
