cmake_minimum_required(VERSION 3.10)
project(ex09_math)
set(CMAKE_CXX_STANDARD 17)

add_executable(ex01_sieve_starter        ex01_sieve_starter.cpp)
add_executable(ex01_sieve_solution       ex01_sieve_solution.cpp)
add_executable(ex02_mod_pow_starter      ex02_mod_pow_starter.cpp)
add_executable(ex02_mod_pow_solution     ex02_mod_pow_solution.cpp)
add_executable(ex03_mod_inverse_starter  ex03_mod_inverse_starter.cpp)
add_executable(ex03_mod_inverse_solution ex03_mod_inverse_solution.cpp)
add_executable(ex04_ncr_starter          ex04_ncr_starter.cpp)
add_executable(ex04_ncr_solution         ex04_ncr_solution.cpp)
add_executable(ex05_gcd_lcm_starter      ex05_gcd_lcm_starter.cpp)
add_executable(ex05_gcd_lcm_solution     ex05_gcd_lcm_solution.cpp)
